@@ -1,5 +1,11 @@
 2004-11-22 Bart Hakvoort  <gparted@users.sf.net>
 
+	* src/GParted_Core.cc: cosmetics
+	* src/reiserfs.cc: make use of real commands instead of their symlinks. fixed copy of reiserfs filsystem
+	  (the new size wasn't reported correctly)
+
+2004-11-22 Bart Hakvoort  <gparted@users.sf.net>
+
 	* src/ext2.cc,
 	  src/ext3.cc: removed ':' from Blocksize scan.
 	* src/reiserfs.cc: dumped progsreiserfs. From now on gparted uses the official namesystools (reiserfsprogs)
